Revision history for Perl extension RPi::WiringPi.

2.3617 UNREL
        - fix wire colour for the DAC CS pin in the diagram (lt blue from
          orange)
        - added the tester flag to bbdispatch in the FAQs automated test section
        - bump ver of RPi::LCD to 2.3603 due to a bug fix

2.3616  2017-06-24
        - fix FAQ link in the Test portion of POD
        - clean up the way _fatal_exit() works. There's more to do here
        - tidy how the RPI_PINS env var is worked on in certain Util:: methods
        - incorporated RPi::I2C; updated POD and FAQ
        - added t/65-i2c.t for the I2C stuff. Requires an Arduino. See
          examples/arduino.ino for details
        - added a copy of the arduino.ino sketch for testing RPi::I2C, in
          docs/sketch
        - fixed bug in arduino.ino that wasn't resetting the register variable
          back to default, causing failure of a basic read if the I2C bus hadn't
          been reset before another t/65-i2c.t test run (removed workaround from
          the test as well)
        - bump ver of RPi::WiringPi::Constant prereq after adding ALT mode tag
        - bump ver of WiringPi::API to 2.36.12 due to updates in that module
        - bump ver of RPi::Pin to 2.3602
        - added t/70-mode_alt.t to test the various ALT pin modes
        - fix shift register tests. The pins were outside of the $pi object
          scope, so they weren't being reset to INPUT, which broke a later
          test file
        - added I2C/Arduino testing information to the FAQ, and updated the
          diagrams with the Arduino wiring

2.3615  2017-06-22
        - fixed issues with specific pins in test diagram for DAC (closes #29)
          (closes #30)
        - added more code to t/55-dac.t. We now thoroughly test both onboard
          DACs. Updated diagram (closes #33)
        - updated interrupt tests to conform to set_interrupt() as opposed to
          the old interrupt_set()